--- a/style.css
+++ b/style.css
@@ -1,13 +1,43 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    background-color: #FF8376;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+.title {
+    margin: 50px;
+    font-size: 75px;
+    color: #F9FAF8;
 }
 
 .board {
+    margin-bottom: 20px;
     width: 960px;
     height: 960px;
+    border-radius: 10px;
     background-color: white;
     display: flex;
     flex-wrap: wrap;
+}
+
+.options {
+    display: flex;
+    justify-content: space-evenly;
+    width: 960px;
+}
+
+.modify-grid, .reset-grid {
+    margin: 15px 0px;
+    padding: 13px 30px;
+    border: 0;
+    border-radius: 100px;
+    width: 300px;
+    background-color:#FF5E5E;
+    font-weight: 550;
+    font-size: 45px;
+    color: #F9FAF8;
 }
