--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+:root {
+    --red-background: #FF8376;
+    --red-button: #FF5E5E;
+    --yellow-background: #FFED85;
+    --yellow-button: #FFCF78;
+    --green-background: #A5EB93;
+    --green-button: #7BD485;
+    --blue-background: #5B9EFF;
+    --blue-button: #4861E8;
+}
+
 body {
     margin: 0px;
     padding: 0px;
-    background-color: #FF8376;
+    background-color: var(--red-background);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,10 +36,17 @@ body {
 }
 
 .options {
+    margin: 10px;
     display: flex;
     justify-content: space-evenly;
     width: 960px;
 }
+
+
+button {
+    background-color: var(--red-button);
+}
+
 
 .modify-grid, .reset-grid {
     margin: 15px 0px;
@@ -36,8 +54,46 @@ body {
     border: 0;
     border-radius: 100px;
     width: 300px;
-    background-color:#FF5E5E;
     font-weight: 550;
     font-size: 45px;
     color: #F9FAF8;
 }
+
+.themes {
+    margin: 10px;
+    width: 960px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.themes > button {
+    width: 100px;
+    height: 100px;
+    border: 0px;
+    border-radius: 100%;
+}
+
+#red {
+    background-color: #FF5E5E;
+    color: var(--red-background);
+}
+
+#yellow {
+    background-color: var(--yellow-button);
+    color: var(--yellow-background);
+}
+
+#green {
+    background-color: var(--green-button);
+    color: var(--green-background);
+}
+
+#blue {
+    background-color: var(--blue-button);
+    color: var(--blue-background);
+}
+
+.themes > button:hover { 
+    background-color: rgb(226, 226, 226) !important;
+}
+button:active { background-color: rgb(177, 255, 156) !important;}
